--- a/.envrc
+++ b/.envrc
@@ -9,4 +9,7 @@ eval "$(devenv direnvrc)"
 # To silence all output, use `--quiet`.
 #
 # Example usage: use devenv --quiet --impure --option services.postgres.enable:bool true
-use devenv
+if [ -z "${IN_NIX_SHELL:-}" ]; then
+    use flake . --no-pure-eval
+    use devenv
+fi
