--- a/.envrc
+++ b/.envrc
@@ -10,6 +10,6 @@ eval "$(devenv direnvrc)"
 #
 # Example usage: use devenv --quiet --impure --option services.postgres.enable:bool true
 if [ -z "${IN_NIX_SHELL:-}" ]; then
-    use flake . --no-pure-eval
     use devenv
+    use flake . --impure
 fi
