--- a/.envrc
+++ b/.envrc
@@ -4,12 +4,14 @@ export DIRENV_WARN_TIMEOUT=20s
 
 eval "$(devenv direnvrc)"
 
-# `use devenv` supports the same options as the `devenv shell` command.
-#
-# To silence all output, use `--quiet`.
-#
-# Example usage: use devenv --quiet --impure --option services.postgres.enable:bool true
+# entering devenv shell went into an infinite loading loop, so guard
+# TODO: fix the actual reason for this
 if [ -z "${IN_NIX_SHELL:-}" ]; then
+    # `use devenv` supports the same options as the `devenv shell` command.
+    #
+    # To silence all output, use `--quiet`.
+    #
+    # Example usage: use devenv --quiet --impure --option services.postgres.enable:bool true
     use devenv
     use flake . --impure
 fi
